# rust-cfb

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml  search-index.js
.github/workflows/: tests.yml
benches/: benchmark.rs
cfb/: CompoundFile.t.html  enum.Version.html  fn.create.html  fn.open.html  fn.open_rw.html  index.html  sidebar-items.js  struct.CompoundFile.html  struct.Entries.html  struct.Entry.html  struct.Stream.html
cfb/internal/entry/: struct.Entries.html  struct.Entry.html
cfb/internal/version/: enum.Version.html
examples/: cfbinfo.rs  cfbtool.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_total.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Drop.js
implementors/std/io/: trait.Read.js  trait.Seek.js  trait.Write.js
src/: lib.rs
src/cfb/: lib.rs.html
src/cfb/internal/: alloc.rs.html  chain.rs.html  consts.rs.html  dir.rs.html  direntry.rs.html  entry.rs.html  macros.rs.html  mod.rs.html  path.rs.html  sector.rs.html  time.rs.html  version.rs.html
src/internal/: alloc.rs  chain.rs  color.rs  consts.rs  dir.rs  directory.rs  direntry.rs  entry.rs  header.rs  macros.rs  minialloc.rs  minichain.rs  mod.rs  objtype.rs  path.rs  sector.rs  stream.rs  stream_buffer.rs  time.rs  timestamp.rs  uppercase.txt  validate.rs  version.rs
tests/: basic.rs  large.rs  malformed.rs  set_len.rs
tests/infinite_loops_fuzzed/: loop_in_alloc  loop_in_chain  loop_in_directory  loop_in_minialloc  loop_in_minichain  loop_in_open_1  loop_in_open_2
tests/panics_fuzzed/: alloc_panic  minialloc_panic
(+2 files in other folders)
