[package]
name = "cfb"
version = "0.6.1"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Read/write Compound File Binary (structured storage) files"
repository = "https://github.com/mdsteele/rust-cfb"
documentation = "http://mdsteele.github.io/rust-cfb/"
keywords = ["cfb", "storage", "structured"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = "1"
uuid = "0.8.1"

[dev-dependencies]
chrono = "0.4"
clap = "2.27"
