[package]
name = "cfb"
version = "0.14.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Read/write Compound File Binary (structured storage) files"
repository = "https://github.com/mdsteele/rust-cfb"
keywords = ["cfb", "storage", "structured"]
license = "MIT"
readme = "README.md"
edition = "2018"
rust-version = "1.74"

[dependencies]
fnv = "1.0"
uuid = "1"
web-time = "1"

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
rand_pcg = "0.3"
time = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmark"
harness = false